examples/test/testpolicy11352.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11352
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key21: value28
      key49: value45
      key13: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value37
          key6: value3
      podSelector:
        matchLabels:
          key47: value42
